# tfl-streaming-pipeline

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pipeline_config.py  pyproject.toml
docs/adr/: ADR_002_Kafka_parquet_choice.md
docs/mvp_tracker/: tracker_mvp_v1.md
ingestion/: consumer.py  producer.py
transforms/: bronze_to_silver.py
